--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,700;1,400&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/414c4b498a.js" crossorigin="anonymous"></script>
     <title>Blizzard | BRChallenges</title>
   </head>
   <body>
